macros/candle-macros/tests/ui/fail/missing_trait.stderr
error[E0599]: no associated item named `NAME` found for struct `Q4_0` in the current scope
  --> tests/ui/fail/missing_trait.rs:68:1
   |
36 |   struct Q4_0;
   |   ----------- associated item `NAME` not found for this struct
...
68 |   register_quantized_types! {
   |  _^
69 | |     Q4_0
70 | | }
   | |_^ associated item not found in `Q4_0`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `QuantizedType` defines an item `NAME`, perhaps you need to implement it
  --> tests/ui/fail/missing_trait.rs:23:9
   |
23 |         pub trait QuantizedType {
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `register_quantized_types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no associated item named `SIZE_IN_BYTES` found for struct `Q4_0` in the current scope
  --> tests/ui/fail/missing_trait.rs:68:1
   |
36 |   struct Q4_0;
   |   ----------- associated item `SIZE_IN_BYTES` not found for this struct
...
68 |   register_quantized_types! {
   |  _^
69 | |     Q4_0
70 | | }
   | |_^ associated item not found in `Q4_0`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `QuantizedType` defines an item `SIZE_IN_BYTES`, perhaps you need to implement it
  --> tests/ui/fail/missing_trait.rs:23:9
   |
23 |         pub trait QuantizedType {
   |         ^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `register_quantized_types` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `matmul` found for struct `Q4_0` in the current scope
  --> tests/ui/fail/missing_trait.rs:68:1
   |
36 |   struct Q4_0;
   |   ----------- function or associated item `matmul` not found for this struct
...
68 |   register_quantized_types! {
   |  _^
69 | |     Q4_0
70 | | }
   | |_^ function or associated item not found in `Q4_0`
   |
   = note: this error originates in the macro `register_quantized_types` (in Nightly builds, run with -Z macro-backtrace for more info)
